--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,11 +43,7 @@
       "error", 
       { 
         "selector": "interface", 
-        "format": ["PascalCase"], 
-        "custom": { 
-          "regex": "^I[A-Z]", 
-          "match": true 
-        } 
+        "format": ["PascalCase"]
       } 
     ],
     "@typescript-eslint/explicit-module-boundary-types": ["warn", {
